# haskell-flake-237-reproducible

llvm/: README.md  example.cabal  flake.nix
sample-project/: LICENSE  Setup.hs  sample-project.cabal
using-sample-project/: README.md  example.cabal  flake.nix
