cabal-version:      3.0
name:               sample-project
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Márton Petes
maintainer:         tx0lwm@inf.elte.hu
-- copyright:
build-type:         Custom
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

custom-setup
  setup-depends: base, Cabal

common warnings
    ghc-options: -Wall

executable sample-project
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: GHC2021
